Fixed issue where review section was overflowing on screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -289,10 +289,6 @@ nav h1 a {
   margin: 0 auto 2rem;
   overflow: hidden;
   padding: 0 20px 20px;
-  width: 90%;
-}
-#reviews-list li p {
-
 }
 #restaurant-hours td {
   color: #666;
